--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -2,7 +2,9 @@
 title: "Week1-Homework part2"
 author: "Zhi Ye"
 date: "2017-9-30"
-output: pdf_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -11,23 +13,23 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Log-normal distribution
 100 values, mu=1, sigma=.25
-```{r cars}
+```{r distribution}
 x <- rlnorm(100,1,0.25)
 ```
 
 ## Histogram of the distribution
 
-```{r pressure, echo=FALSE}
+```{r plot}
 hist(x,main = "Histogram of the distribution", xlab = "Variable", ylab = "Frequency of variables")
 ```
 
 ## Histogram of the distribution on the log scale
-```{r pressure, echo=FALSE}
+```{r plot2}
 hist(log(x),main = "Histogram of the distribution on the log scale")
 ```
 
 ##  Mean and variance of the sample
-```{r pressure, echo=FALSE}
+```{r mean and var}
 mean(x)
 var(x)
 ```
